@@ -23,6 +23,8 @@
 - Return error code when exiting the clients.
 - mosquitto_publish() now returns MOSQ_ERR_INVAL if the topic contains + or #
 - mosquitto now silently rejects published messages with + or # in the topic.
+- max_connections is now a per-listener setting instead of global.
+- Connection count is now reduced when clients disconnect (bug #797983).
 
 0.10.2 - 20110106
 =================
